# ResearchOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt  researchos-api-backend.patch  researchos-web-ui.patch  run.py  serve.py
agents/: architect_agent.py  base_agent.py  coder_agent.py  critic_agent.py  graph.py  orchestrator.py  planner_agent.py  researcher.py  state.py  summarizer_agent.py
core/: config.py  memory.py  runtime.py
debug/: debug_all_mcpServers.py  debug_github_mcp.py
docs/: ARCHITECTURE.md
llm/: router.py
mcp_servers/arxiv_mcp/: server_arxiv.py
mcp_servers/web_search/: server.py  tools.py
research-os/app/: layout.tsx  page.tsx
research-os/contexts/: AuthContext.tsx
research-os/lib/: api.ts  auth.ts  stream.ts
sandbox/: code_checks.py  project_venv.py
tests/: architect_agent_test.py  full_graph_test.py  orchestrator_test.py  researcher_agent_test.py
web/: alembic.ini  app.py  auth.py  bootstrap.py  config_resolution.py  config_store.py  crypto.py  database.py  dependencies.py  main.py  mcp_manager.py  model_apply.py  model_defaults.py  model_resolver.py  models.py  oauth.py  pipeline.py  run_manager.py  run_type.py  schemas.py  security.py  zip_builder.py  zip_utils.py
web/alembic/: env.py
web/api/: config.py  runs.py  threads.py
web/routes/: auth.py  runs.py  settings.py
web/static/: style.css
web/templates/: _result.html  base.html  dashboard.html  login.html  run.html  settings.html  setup_account.html
(+19 files in other folders)
