[project]
name = "researchos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-mistralai>=1.1.5",
    "langchain-openrouter>=0.2.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
    "langsmith>=0.9.0",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
[tool.pytest.ini_options]
pythonpath = "."
